2000-02-24  Michael Natterer  <mitch@gimp.org>

	* app/datafiles.c: fixed a memleak.

	* app/gimpbrushlist.c
	* app/gradient.c
	* app/palette.c: use the gimp_path_* functions, cleanups.

	* app/gimpbrushpipe.c: call the "destroy" function of the parent
	class, not of the object class. Fixes a huge memleak on each
	"Refresh".

	* app/gimpbrushpipeP.h
	* app/gimplist.c
	* app/gimpbrush.c: did some cleanups while searching the brush
	memleak.

	* libgimp/gimpenv.c: gimp_path_get_user_writable_dir(): return a
	copy of the string.

	* plug-ins/FractalExplorer/Dialogs.c
	* plug-ins/gfig/gfig.c
	* plug-ins/gflare/gflare.c: g_free() the string returned by
	gimp_path_get_user_writable_dir().

Thu Feb 24 02:20:15 CET 2000  Sven Neumann <sven@gimp.org>

	* app/gimprc.c: gimp_parasite_attach() creates a copy of
	the parasite, so free it here after attaching it

Thu Feb 24 00:42:12 CET 2000  Sven Neumann <sven@gimp.org>

	* app/text_tool.c: don't crash if a font couldn't be loaded.
	(fixes bug #6526). Reordered the way the objects in the  
	tool_options dialog are connected, so the widgets sensitivity 
	is set correctly.

Thu Feb 24 00:10:29 CET 2000  Sven Neumann <sven@gimp.org>

	* app/plug_in.c: don't bind to the default textdomain twice if
	a plug-in adds it using gimp_plugin_domain_add ()

Wed Feb 23 23:31:07 CET 2000  Sven Neumann <sven@gimp.org>
	
	* app/plug_in.c: plugged memleaks

2000-02-24  Tor Lillqvist  <tml@iki.fi>

	* libgimp/gimp.h (Win32): Include <stdlib.h> for __argc and__argv.

	* libgimp/{gimp,gimpui}.def: Add new entry points.

	* libgimp/gimpenv.c (Win32): Make compileable, with no geteuid etc.

	* app/makefile.{cygwin,msc}
	* libgimp/makefile.{cygwin,msc}: Update object file list.

Wed Feb 23 21:07:41 CET 2000  Sven Neumann <sven@gimp.org>

	* app/fileops.c
	* app/main.c
	* app/menus.[ch]
	* app/plug_in.c: the ultimate solution to the i18n problem :-)

	We bind to the gimp-std-plugins domain and additionally to all