@@ -1,5 +1,10 @@
 2000-02-24  Michael Natterer  <mitch@gimp.org>
 
+	* app/tool_options.c: another leak: don't allocate the
+	PaintPressureOptions structure twice for one tool.
+
+2000-02-24  Michael Natterer  <mitch@gimp.org>
+
 	* app/datafiles.c: fixed a memleak.
 
 	* app/gimpbrushlist.c
